# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  header.h  hit.h  matrials.h  ray.h  sphere.h  utility.h  vec.h  vec3.h
src/: RT.cpp  a.out  hit.cpp  matrials.cpp  sphere.cpp
